commit translated contents

--- a/articles/index.yml
+++ b/articles/index.yml
@@ -62,6 +62,10 @@ sections:
             text: JavaScript
             href: 'https://docs.microsoft.com/azure/bot-service/javascript/bot-builder-javascript-quickstart'
           - image:
+              src: v4sdk/media/logo_python.svg
+            text: Python
+            href: 'https://docs.microsoft.com/azure/bot-service/javascript/bot-builder-python-quickstart'
+          - image:
               src: media/index/azure_portal.png
             text: Portail Azure
             href: 'https://docs.microsoft.com/azure/bot-service/bot-service-quickstart'
